# Sudokill

./: .gitignore  CMakeLists.txt  linux-toolchain.cmake
build-linux/: CMakeCache.txt
desktop_app/: CMakeLists.txt
desktop_app/include/: shader.h
desktop_app/src/: main.cpp  shader.cpp
docs/: _sidebar.md  gameplay.md  index.html  overview.md
game_lib/include/: game.h
game_lib/src/: game.cpp
proto/: CMakeLists.txt
proto/desktop_app/: CMakeLists.txt
proto/desktop_app/res/shaders/: solid_color.frag.hlsl  text.vert.hlsl
proto/desktop_app/src/: main.cpp
proto/game_lib/: CMakeLists.txt
proto/game_lib/src/: game.cpp
proto/term_app/: CMakeLists.txt
proto/term_app/include/: box_chars.h
proto/term_app/src/: main.cpp
src/: game.cpp  main.cpp
